--- a/dcm.css
+++ b/dcm.css
@@ -1,13 +1,26 @@
 img {max-width: 100%;}
 
 
-div { width: 50%;
+body {
       margin-left: auto;
       margin-right: auto;
-     
-}
+      width: 50%;
 
-body {
-       background-color: bisque;
-       background-image: url(img-1-small580.png);
+       background-image: url(Mapa\ GB.jpg);
+       background-repeat: no-repeat;
+       background-size: 100%;
+       color: rgb(0, 110, 255);
+       overflow-x: hidden;
+    
+      
+
+       flex-wrap: wrap;
+       flex-direction: column;
 }
+img{
+      border-radius: 50px;
+
+
+
+}
+  
