--- a/dcm.css
+++ b/dcm.css
@@ -16,6 +16,8 @@ body {
 
        flex-wrap: wrap;
        flex-direction: column;
+
+
 }
 img{
       border-radius: 50px;
@@ -23,4 +25,7 @@ img{
 
 
 }
-  
+
+  div{
+        
+  }
